--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = []
+dependencies = [
+	"lxml>=4.6.0"
+]
 
 [project.scripts]
 xml-validator = "xml_validator:main"
